lib/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "\r\n",
      peg$c1 = peg$literalExpectation("\r\n", false),
      peg$c2 = "\t",
      peg$c3 = peg$literalExpectation("\t", false),
      peg$c4 = " ",
      peg$c5 = peg$literalExpectation(" ", false),
      peg$c6 = /^[\x01-\x08]/,
      peg$c7 = peg$classExpectation([["\x01", "\b"]], false, false),
      peg$c8 = "\x0B",
      peg$c9 = peg$literalExpectation("\x0B", false),
      peg$c10 = "\f",
      peg$c11 = peg$literalExpectation("\f", false),
      peg$c12 = /^[\x0E-\x1F]/,
      peg$c13 = peg$classExpectation([["\x0E", "\x1F"]], false, false),
      peg$c14 = "\x7F",
      peg$c15 = peg$literalExpectation("\x7F", false),
      peg$c16 = /^[\x01-\t]/,
      peg$c17 = peg$classExpectation([["\x01", "\t"]], false, false),
      peg$c18 = /^[\x0E-\x7F]/,
      peg$c19 = peg$classExpectation([["\x0E", "\x7F"]], false, false),
      peg$c20 = /^[\x80-\uFFFF]/,
      peg$c21 = peg$classExpectation([["\x80", "\uFFFF"]], false, false),
      peg$c22 = function(u) {
      		rfc6532 = true;
      		return u;
      	},
      peg$c23 = "\\",
      peg$c24 = peg$literalExpectation("\\", false),
      peg$c25 = function(qp) {
      		return qp[1];
      	},
      peg$c26 = "",
      peg$c27 = /^[!-']/,
      peg$c28 = peg$classExpectation([["!", "'"]], false, false),
      peg$c29 = /^[*-[]/,
      peg$c30 = peg$classExpectation([["*", "["]], false, false),
      peg$c31 = /^[\]-~]/,
      peg$c32 = peg$classExpectation([["]", "~"]], false, false),
      peg$c33 = "(",
      peg$c34 = peg$literalExpectation("(", false),
      peg$c35 = ")",
      peg$c36 = peg$literalExpectation(")", false),
      peg$c37 = function(cm) {
      		var comments = [];
      		var str = "";
      		for (var i = 0; i < cm.length; ++i)
      		{
      			if (typeof(cm[i][1]) === 'string') {
      				str += cm[i][1];
      			} else {
      				if (str.length > 0) {
      					comments.push(str);
      					str = "";
      				}
      				comments.push(cm[i][1]);
      			}
      		}
      		if (comments.length === 0 && str.length === 0) {
      			comments.push("");
      		}
      		if (str.length > 0) {
      			comments.push(str);
      		}
      		return comments;
      	},
      peg$c38 = function(c1, c2) {
      		var comments = [];
      		for (var i = 0; i < c1.length; i++) {
      			if (c1[i][1]) {
      				comments = comments.concat(c1[i][1]);
      			}
      		}
      		if (c2[1]) {
      			comments = comments.concat(c2[1]);
      		}
      		return comments;
      	},
      peg$c39 = /^[A-Z]/,
      peg$c40 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c41 = /^[a-z]/,
      peg$c42 = peg$classExpectation([["a", "z"]], false, false),
      peg$c43 = /^[0-9]/,
      peg$c44 = peg$classExpectation([["0", "9"]], false, false),
      peg$c45 = "!",
      peg$c46 = peg$literalExpectation("!", false),
      peg$c47 = "#",
      peg$c48 = peg$literalExpectation("#", false),
      peg$c49 = "$",
      peg$c50 = peg$literalExpectation("$", false),
      peg$c51 = "%",
      peg$c52 = peg$literalExpectation("%", false),
      peg$c53 = "&",
      peg$c54 = peg$literalExpectation("&", false),
      peg$c55 = "'",
      peg$c56 = peg$literalExpectation("'", false),
      peg$c57 = "*",
      peg$c58 = peg$literalExpectation("*", false),
      peg$c59 = "+",
      peg$c60 = peg$literalExpectation("+", false),
      peg$c61 = "-",
      peg$c62 = peg$literalExpectation("-", false),
      peg$c63 = "/",
      peg$c64 = peg$literalExpectation("/", false),
      peg$c65 = "=",
      peg$c66 = peg$literalExpectation("=", false),
      peg$c67 = "?",
      peg$c68 = peg$literalExpectation("?", false),
      peg$c69 = "^",
      peg$c70 = peg$literalExpectation("^", false),
      peg$c71 = "_",
      peg$c72 = peg$literalExpectation("_", false),
      peg$c73 = "`",
      peg$c74 = peg$literalExpectation("`", false),
      peg$c75 = "{",
      peg$c76 = peg$literalExpectation("{", false),
      peg$c77 = "|",
      peg$c78 = peg$literalExpectation("|", false),
      peg$c79 = "}",
      peg$c80 = peg$literalExpectation("}", false),
      peg$c81 = "~",
      peg$c82 = peg$literalExpectation("~", false),
      peg$c83 = function(c1, txt, c2) {
      		var comments = [];
      		if (c1) {
      			comments = comments.concat(c1);
      		}
      		if (c2) {
      			comments = comments.concat(c2);
      		}
      		return {
      			value: txt,
      			comments: comments
      		};
      	},
      peg$c84 = ".",
      peg$c85 = peg$literalExpectation(".", false),
      peg$c86 = function(at, bt) {
      		var str = at.join("");
      		for (var i = 0; i < bt.length; i++) {
      			str += "." + bt[i][1].join("");
      		}
      		return str;
      	},
      peg$c87 = /^[#-[]/,
      peg$c88 = peg$classExpectation([["#", "["]], false, false),
      peg$c89 = "\"",
      peg$c90 = peg$literalExpectation("\"", false),
      peg$c91 = function(c1, qstr, c2) {
      		var str = "";
      		var comments = [];
      		if (c1) {
      			comments = comments.concat(c1);
      		}
      		if (c2) {
      			comments = comments.concat(c2);
      		}
      		for (var i = 0; i < qstr.length; ++i) {
      			str += qstr[i][1];
      		}
      		return {
      			value: str,
      			comments: comments
      		};
      },
      peg$c92 = "@",
      peg$c93 = peg$literalExpectation("@", false),
      peg$c94 = function(lp, d) {
      		lp.quoted_string = quoted_string;
      		return {
      			local_part: lp,
      			domain: d,
      			rfc6532: rfc6532
      		};
      	},
      peg$c95 = function(qs) {
      		quoted_string = true;
      		return qs;
      	},
      peg$c96 = "[",
      peg$c97 = peg$literalExpectation("[", false),
      peg$c98 = "]",
      peg$c99 = peg$literalExpectation("]", false),
      peg$c100 = function(c1, d, c2) {
      		var str = "";
      		var comments = [];
      		if (c1) {
      			comments = comments.concat(c1);
      		}
      		if (c2) {
      			comments = comments.concat(c2);
      		}
      		for (var i = 0; i < d.length; ++i) {
      			str += d[i][1];
      		}
      		return {
      			value: str,
      			comments: comments
      		};
      	},
      peg$c101 = /^[!-Z]/,
      peg$c102 = peg$classExpectation([["!", "Z"]], false, false),
      peg$c103 = /^[\^-~]/,
      peg$c104 = peg$classExpectation([["^", "~"]], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseaddr_spec();

    return s0;
  }

  function peg$parseCRLF() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c0) {
      s0 = peg$c0;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseWSP() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 9) {
      s0 = peg$c2;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c4;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
    }

    return s0;
  }

  function peg$parseNO_WS_CTL() {
    var s0;

    if (peg$c6.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 11) {
        s0 = peg$c8;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 12) {
          s0 = peg$c10;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c12.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s0 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 127) {
              s0 = peg$c14;
              peg$currPos++;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsetext() {
    var s0, s1;

    if (peg$c16.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 11) {
        s0 = peg$c8;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 12) {
          s0 = peg$c10;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c18.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (peg$c20.test(input.charAt(peg$currPos))) {
              s1 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c21); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c22(s1);
            }
            s0 = s1;
          }
        }
      }
    }

    return s0;
  }

  function peg$parsequoted_pair() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s2 = peg$c23;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parsetext();
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c25(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseFWS() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseWSP();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseWSP();
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseCRLF();
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseWSP();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseWSP();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$c26;
    }

    return s0;
  }

  function peg$parsectext() {
    var s0;

    s0 = peg$parseNO_WS_CTL();
    if (s0 === peg$FAILED) {
      if (peg$c27.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s0 === peg$FAILED) {
        if (peg$c29.test(input.charAt(peg$currPos))) {
          s0 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c30); }
        }
        if (s0 === peg$FAILED) {
          if (peg$c31.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c32); }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseccontent() {
    var s0;

    s0 = peg$parsectext();
    if (s0 === peg$FAILED) {
      s0 = peg$parsequoted_pair();
      if (s0 === peg$FAILED) {
        s0 = peg$parsecomment();
      }
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c33;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c34); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseFWS();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseccontent();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseFWS();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseccontent();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseFWS();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c35;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c36); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c37(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCFWS() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseFWS();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parsecomment();
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseFWS();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsecomment();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parseFWS();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parsecomment();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = peg$parseFWS();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c38(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseatext() {
    var s0, s1;
